# hexapod_assembly

main/: CMakeLists.txt  hexapod_testing.cpp
main/modules/bluetooth/src/: bluetooth.cpp  bt_nimble.cpp  misc.cpp
main/modules/hexapod/src/: hexapod.cpp  hexapod_leg.cpp  pca9685_handler.cpp
